# snake_game

./: .gitignore  README.md  main.py  makefile  pyproject.toml
config/dynaconf/: game.toml  window.toml
config/mypy/: mypy.ini
config/pylint/: pylint.ini
model/: model.pth
snake/: agents.py  collision_checker.py  colors.py  config.py  dynaconf_config.py  exceptions.py  fonts.py  game.py  game_controls.py  model.py  publisher.py  state.py  validators.py
snake/game_objects/: factories.py  objects.py
snake/pygame_interface/: constants.py  game_ui.py  initializer.py  utils.py
tests/: conftest.py  fake_classes.py  test_agents.py  test_collision_checker.py  test_fonts.py  test_game.py  test_game_controls.py  test_publisher.py  test_state.py  test_validators.py
tests/fixtures/: test_settings.toml
tests/game_objects/: test_factories.py  test_game_objects.py
tests/model/: model.pth
tests/pygame_interface/: test_game_ui.py
