[tool.poetry]
name = "pysnake"
version = "0.1.0"
description = ""
authors = ["Cornel"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"
dynaconf = "^3.1.11"
tenacity = "^8.1.0"
numpy = "^1.23.4"
torch = "^1.13.0"
torchvision = "^0.14.0"

[tool.poetry.dev-dependencies]
pylint = "^2.7.2"
pytest = "*"
mypy = "^0.930"
isort = "^5.10.1"
black = "22.8.0"
click = "8.1.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
